--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -51,7 +51,8 @@
             android:layout_gravity="center"
             android:text="Ingresar"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="30dp"/>
+            android:layout_marginBottom="30dp"
+            android:onClick="onClick"/>
 
     </LinearLayout>
 
