--- a/app/src/main/res/layout/content_mi__perfil.xml
+++ b/app/src/main/res/layout/content_mi__perfil.xml
@@ -1,16 +1,20 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/content_mi__perfil"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="juliethosorio.vitalapp.MiPerfil_Fragment">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="juliethosorio.vitalapp.Mi_PerfilActivity"
+    tools:showIn="@layout/app_bar_mi__perfil">
 
-    <LinearLayout
-        android:id="@+id/activity_registro_usuario"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="10dp"
-        android:orientation="vertical"
-        tools:context="juliethosorio.vitalapp.RegistroUsuarioActivity">
+
         <GridLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -84,7 +88,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginLeft="20dp">
 
                 <TextView
                     android:id="@+id/campoIdPerfil"
@@ -151,6 +156,6 @@
             </LinearLayout>
         </ScrollView>
 
-    </LinearLayout>
 
-</FrameLayout>
+
+</LinearLayout>
