--- a/app/src/main/res/layout/activity_registro_usuario.xml
+++ b/app/src/main/res/layout/activity_registro_usuario.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_registro_usuario"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -178,45 +177,7 @@
                     android:inputType="textMultiLine"
                     android:ems="10"
                    />
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    >
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Agregar"
-                        android:id="@+id/btnAgregar"
-                        android:layout_marginLeft="70dp"
-                        android:onClick="mostrarLista"/>
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Salir"
-                        android:id="@+id/btnSalir"
-                        android:layout_marginLeft="20dp"
-                        android:onClick="mostrarLista"/>
 
-                </LinearLayout>
-
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1dp"
-                    android:background="#000000"/>
-
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/RListaCondiciones"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.41"
-                        android:visibility="gone"
-                        android:layout_marginBottom="20dp"/>
-
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1dp"
-                    android:background="#000000"/>
 
             </GridLayout>
 
@@ -245,6 +206,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:background="@color/colorPrimary"
+                android:textColor="#FFFFFF"
                 android:text="guardar"
                 android:layout_marginTop="20dp"
                 android:onClick="onClick"/>
