--- a/app/src/main/res/layout/fragment_dos.xml
+++ b/app/src/main/res/layout/fragment_dos.xml
@@ -6,26 +6,41 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary">
 
         <ImageView
-            android:layout_width="150dp"
-            android:layout_height="300dp"
-            android:src="@drawable/splash2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/appdos"
             android:id="@+id/imageView2"
             android:layout_marginTop="16dp"
             android:layout_below="@+id/textView2"
             android:layout_centerHorizontal="true" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lorem ipsum dolor sit amet, commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-            android:id="@+id/textView2"
-            android:padding="10dp"
-            android:layout_alignParentTop="true"
+            android:text="VitalApp"
+            android:textColor="#fff"
+            android:textSize="30sp"
+            android:layout_marginLeft="113dp"
+            android:layout_marginStart="113dp"
+            android:id="@+id/textView7"
+            android:layout_below="@+id/imageView4"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
+
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/logo"
+            android:layout_marginLeft="27dp"
+            android:layout_marginStart="27dp"
+            android:id="@+id/imageView4"
+            android:layout_alignParentTop="true"
+            android:layout_alignLeft="@+id/textView7"
+            android:layout_alignStart="@+id/textView7" />
 
     </RelativeLayout>
 
