--- a/app/src/main/res/layout/fragment_tres.xml
+++ b/app/src/main/res/layout/fragment_tres.xml
@@ -6,25 +6,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary">
 
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="300dp"
-            android:src="@drawable/splash3"
-            android:id="@+id/imageView2"
-            android:layout_below="@+id/textView2"
-            android:layout_centerHorizontal="true" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Lorem ipsum dolor sit amet, enim ad minim veniam,is aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-            android:id="@+id/textView2"
-            android:padding="10dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
 
         <Button
             android:id="@+id/btnIrRegistro"
@@ -35,6 +19,16 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="16dp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/tres"
+            android:id="@+id/imageView2"
+            android:layout_marginBottom="22dp"
+            android:layout_above="@+id/btnIrRegistro"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
     </RelativeLayout>
 
