--- a/app/src/main/res/layout/fragment_uno.xml
+++ b/app/src/main/res/layout/fragment_uno.xml
@@ -8,24 +8,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Lorem ipsum dolor sit amet, enim ad minim veniam,  in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-            android:id="@+id/textView2"
-            android:padding="10dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="300dp"
-            android:src="@drawable/splash1"
-            android:id="@+id/imageView2"
-            android:layout_marginTop="17dp"
-            android:layout_below="@+id/textView2"
-            android:layout_centerHorizontal="true" />
 
         <Button
             android:id="@+id/btnSaltar"
@@ -33,9 +15,22 @@
             android:layout_height="wrap_content"
             android:text="Saltar"
             android:onClick="onClick"
+            android:background="@color/colorPrimary"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="11dp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/inicio"
+            android:id="@+id/imageView2"
+            android:layout_above="@+id/btnSaltar"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="28dp" />
 
 
     </RelativeLayout>
