--- a/app/src/main/res/layout/content_registro_dependientes.xml
+++ b/app/src/main/res/layout/content_registro_dependientes.xml
@@ -149,27 +149,6 @@
                     android:inputType="textMultiLine"
                     android:ems="10"
                     />
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    >
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Agregar"
-                        android:id="@+id/btnAgregar"
-                        android:layout_marginLeft="70dp"
-                        android:onClick="mostrarLista"/>
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Salir"
-                        android:id="@+id/btnSalir"
-                        android:layout_marginLeft="20dp"
-                        android:onClick="mostrarLista"/>
-
-                </LinearLayout>
                 <GridLayout
                     android:id="@+id/GridAgregar"
                     android:layout_width="match_parent"
@@ -179,10 +158,6 @@
                     android:visibility="gone"
                     android:layout_marginTop="40dp">
 
-                    <View
-                        android:layout_width="fill_parent"
-                        android:layout_height="1dp"
-                        android:background="#000000"/>
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/RListaCondiciones"
@@ -192,10 +167,7 @@
                         android:visibility="gone"
                         android:layout_marginBottom="20dp"/>
 
-                    <View
-                        android:layout_width="fill_parent"
-                        android:layout_height="1dp"
-                        android:background="#000000"/>
+
                 </GridLayout>
 
 
@@ -206,6 +178,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:background="@color/colorPrimary"
+                android:textColor="#FFF"
+                android:textStyle="bold"
                 android:text="guardar"
                 android:layout_marginTop="20dp"
                 android:onClick="onClick"/>
@@ -213,10 +188,5 @@
         </LinearLayout>
     </ScrollView>
 
-    <EditText
-        android:id="@+id/campoDireccion"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Direccion"/>
 
 </LinearLayout>
