Este es el prototipo o producto minimo viable que se presento para la especialización

--- a/app/src/main/res/layout/activity_registro_usuario.xml
+++ b/app/src/main/res/layout/activity_registro_usuario.xml
@@ -69,8 +69,7 @@
                     android:layout_height="30dp"
                     android:drawableBottom="@drawable/calendario"
                     android:background="@null"
-                    android:layout_gravity="center"
-                    android:onClick="mostrarCalendario"/>
+                    android:layout_gravity="center"/>
              </LinearLayout>
 
         <LinearLayout
@@ -204,8 +203,7 @@
                 android:background="@color/colorPrimary"
                 android:textColor="#FFFFFF"
                 android:text="guardar"
-                android:layout_marginTop="20dp"
-                android:onClick="onClick"/>
+                android:layout_marginTop="20dp"/>
 
         </LinearLayout>
     </ScrollView>
